# unimoc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clang-format  project.xml  requirements.txt
cmake/: Modm.cmake  modm.cmake
hardware/: HardwareInterface.hpp  hardware_interface.hpp
hardware/batterycasecontroller/: CMakeLists.txt  HardwareInterfaceConfig.hpp  adc.cpp  analog.cpp  analog.hpp  base.cpp  base.hpp  hardware_interface_config.hpp  project.xml  pulse_width.cpp  pulse_width.hpp  sincos.cpp
hardware/batterycasecontroller/modm/: CMakeLists.txt  openocd.cfg
hardware/batterycasecontroller/modm/cmake/: ModmConfiguration.cmake
hardware/batterycasecontroller/modm/ext/gcc/: atomic.cpp
hardware/batterycasecontroller/modm/src/modm/: platform.hpp  processing.hpp
hardware/batterycasecontroller/modm/src/modm/architecture/: interface.hpp
hardware/batterycasecontroller/modm/src/modm/architecture/interface/: fiber.hpp
hardware/batterycasecontroller/modm/src/modm/debug/logger/: logger.hpp
hardware/batterycasecontroller/modm/src/modm/io/: iodevice_wrapper.hpp  iostream.hpp
hardware/batterycasecontroller/modm/src/modm/platform/: device.hpp
hardware/batterycasecontroller/modm/src/modm/platform/adc/: adc_1.hpp  adc_1_impl.hpp  adc_2.hpp  adc_2_impl.hpp  adc_3.hpp  adc_3_impl.hpp  adc_4.hpp  adc_4_impl.hpp  adc_5.hpp  adc_5_impl.hpp  adc_interrupt_4.hpp  adc_interrupt_5.cpp
hardware/batterycasecontroller/modm/src/modm/platform/clock/: rcc_impl.hpp
hardware/batterycasecontroller/modm/src/modm/platform/core/: startup.c  vectors.c  vectors.hpp
hardware/batterycasecontroller/modm/src/modm/platform/gpio/: base.hpp  data.hpp  unused.hpp
hardware/batterycasecontroller/modm/src/modm/platform/rtt/: rtt.cpp
hardware/batterycasecontroller/modm/src/modm/platform/timer/: timer_8.cpp  timer_8.hpp
lib/: CMakeLists.txt
lib/src/: dummy.cpp
lib/system/: RotorReference.hpp  SinCos.cpp  SinCos.hpp  StatorReference.hpp  ThreePhase.hpp  rotor_angle.cpp  rotor_angle.hpp  rotor_system.cpp  rotor_system.hpp  stator_system.cpp  stator_system.hpp  three_phase_system.cpp  three_phase_system.hpp
lib/units/: Units.hpp
modm/: CMakeLists.txt
modm/cmake/: ModmConfiguration.cmake
modm/link/: linkerscript.ld
modm/src/modm/: platform.hpp
modm/src/modm/platform/adc/: adc_4_impl.hpp  adc_interrupt_3.hpp  adc_interrupt_5.hpp
modm/src/modm/platform/core/: peripherals.hpp
modm/src/modm/platform/rtt/: rtt.cpp
src/: CMakeLists.txt  main.cpp
src/logging/: CMakeLists.txt  logging.cpp
tests/: CMakeLists.txt  system_test.cpp  test_hosted.xml  test_system_SinCos.hpp
